deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tacitus
  namespace: tacitus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tacitus.ethos-adamas.it
      secretName: tacitus-tls
  rules:
    - host: tacitus.ethos-adamas.it
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: tacitus-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tacitus-frontend
                port:
                  name: http
