deploy/redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: tacitus
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tacitus-http
  namespace: tacitus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: tacitus-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: tacitus.ethos-adamas.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tacitus-frontend
                port:
                  name: http
